--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
 ** Copyright 2011, The CyanogenMod Project
@@ -16,18 +17,7 @@
 */
 -->
 
-<resources>
-    <!-- If there is no sysfs-based control mechanism, enable this -->
-    <bool name="useCameraInterface">false</bool>
-
-    <!-- Full path to the sysfs toggle -->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="flashDevice">/sys/devices/virtual/camera/rear/rear_flash</string>
-
-    <!-- Lowest setting -->
-    <integer name="valueOn">1</integer>
-    <!-- Middle setting -->
-    <integer name="valueHigh">-1</integer>
-    <!-- Highest setting, leave -1 if it doesn't exist -->
-    <integer name="valueDeathRay">-1</integer>
-
 </resources>
+
