expressatt: Torch: enable high brightness mode
Change-Id: Ida2ca300492b431c0fd1a7cbef8cf9b68dc4a929

--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -19,5 +19,13 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="flashDevice">/sys/devices/virtual/camera/rear/rear_flash</string>
+
+    <!-- Low setting -->
+    <integer name="valueLow">1</integer>
+    <!-- Middle setting -->
+    <integer name="valueHigh">2</integer>
+
+    <!-- If the device does not support high brightness mode, disable this -->
+    <bool name="hasHighBrightness">true</bool>
 </resources>
 
